@@ -4,10 +4,11 @@ import home.project.domain.member.Member;
 import home.project.domain.order.Cart;
 import home.project.domain.product.Product;
 import home.project.domain.product.ProductCart;
-import home.project.dto.requestDTO.ProductDTOForOrder;
 import home.project.dto.responseDTO.CartResponse;
-import home.project.dto.responseDTO.MyCartResponse;
+import home.project.dto.responseDTO.ProductSimpleResponseForCart;
+import home.project.exceptions.exception.IdNotFoundException;
 import home.project.repository.order.CartRepository;
+import home.project.repository.order.ProductCartRepository;
 import home.project.service.member.MemberService;
 import home.project.service.product.ProductService;
 import home.project.service.util.Converter;
@@ -21,15 +22,17 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
@@ -39,6 +42,9 @@ class CartServiceImplTest {
 
     @Mock
     private CartRepository cartRepository;
+
+    @Mock
+    private ProductCartRepository productCartRepository;
 
     @Mock
     private MemberService memberService;
@@ -55,15 +61,14 @@ class CartServiceImplTest {
     private Member testMember;
     private Product testProduct;
     private Cart testCart;
+    private ProductCart testProductCart;
 
     @BeforeEach
     void setUp() {
-        // 인증 객체 설정
         UsernamePasswordAuthenticationToken authentication =
                 new UsernamePasswordAuthenticationToken("test@test.com", null);
         SecurityContextHolder.getContext().setAuthentication(authentication);
 
-        // 테스트 데이터 초기화
         testMember = new Member();
         testMember.setId(1L);
         testMember.setEmail("test@test.com");
@@ -72,14 +77,14 @@ class CartServiceImplTest {
         testProduct.setId(1L);
         testProduct.setName("Test Product");
 
-        ProductCart productCart = new ProductCart();
-        productCart.setProduct(testProduct);
-        productCart.setQuantity(2);
+        testProductCart = new ProductCart();
+        testProductCart.setProduct(testProduct);
+        testProductCart.setQuantity(2);
 
         testCart = new Cart();
         testCart.setId(1L);
         testCart.setMember(testMember);
-        testCart.setProductCart(Collections.singletonList(productCart));
+        testCart.setProductCart(Collections.singletonList(testProductCart));
     }
 
     @Nested
@@ -89,82 +94,131 @@ class CartServiceImplTest {
         @Test
         @DisplayName("장바구니 추가 성공")
         void addToCartSuccess() {
-            // given
             when(memberService.findByEmail(anyString())).thenReturn(testMember);
             when(productService.findById(anyLong())).thenReturn(testProduct);
             when(cartRepository.save(any(Cart.class))).thenReturn(testCart);
+            when(converter.convertFromCartToCartResponse(any(Cart.class))).thenReturn(new CartResponse("test@test.com", null));
 
-            ProductDTOForOrder productDTOForOrder = new ProductDTOForOrder(1L, 10000L, 2);
-            List<ProductDTOForOrder> productDTOForOrderList = List.of(productDTOForOrder);
-
-            when(converter.convertFromCartToCartResponse(any(Cart.class)))
-                    .thenReturn(new CartResponse("test@test.com", productDTOForOrderList));
-
-            // when
             CartResponse response = cartService.join(1L, 2);
 
-            // then
             assertThat(response).isNotNull();
             assertThat(response.getEmail()).isEqualTo("test@test.com");
-            assertThat(response.getProducts()).hasSize(1);
-            assertThat(response.getProducts().get(0).getQuantity()).isEqualTo(2);
-
             verify(cartRepository).save(any(Cart.class));
+        }
+
+        @Test
+        @DisplayName("장바구니 추가 실패 - 상품 없음")
+        void addToCartFailProductNotFound() {
+            when(memberService.findByEmail(anyString())).thenReturn(testMember);
+            when(productService.findById(anyLong())).thenThrow(new IdNotFoundException("상품이 존재하지 않습니다."));
+
+            assertThatThrownBy(() -> cartService.join(1L, 2))
+                    .isInstanceOf(IdNotFoundException.class)
+                    .hasMessage("상품이 존재하지 않습니다.");
+
+            verify(cartRepository, never()).save(any(Cart.class));
         }
     }
 
-    /*@Nested
-    @DisplayName("회원별 장바구니 조회")
+    @Nested
+    @DisplayName("장바구니 조회")
     class FindAllByMemberIdTest {
 
         @Test
-        @DisplayName("회원별 장바구니 조회 성공")
+        @DisplayName("장바구니 조회 성공")
         void findAllByMemberIdSuccess() {
-            // given
-            Page<Cart> pagedCart = new PageImpl<>(Collections.singletonList(testCart));
-
-            // ProductDTOForOrder 객체 생성 (테스트용 데이터)
-            ProductDTOForOrder productDTOForOrder = new ProductDTOForOrder(1L, 10000L, 2);
-            List<ProductDTOForOrder> productList = Collections.singletonList(productDTOForOrder);
-
-            // MyCartResponse 객체 생성
-            Page<MyCartResponse> expectedResponses = new PageImpl<>(Collections.singletonList(
-                    new MyCartResponse(productList)  // MyCartResponse 생성자에 맞게 전달
+            Page<ProductCart> pagedProductCart = new PageImpl<>(Collections.singletonList(testProductCart));
+            Page<ProductSimpleResponseForCart> expectedResponse = new PageImpl<>(List.of(
+                    new ProductSimpleResponseForCart(
+                            1L,
+                            "Test Product",
+                            "Test Brand",
+                            10000L,
+                            10,
+                            "image_url",
+                            2,
+                            "Blue"
+                    )
             ));
+            Pageable pageable = PageRequest.of(0, 10);
 
-            // Mock 설정
             when(memberService.findByEmail(anyString())).thenReturn(testMember);
-            when(cartRepository.findAllByMemberId(anyLong(), any(Pageable.class))).thenReturn(pagedCart);
-            when(converter.convertFromPagedCartToPagedMyCartResponse(any(Page.class))).thenReturn(expectedResponses);
+            when(productCartRepository.findByCart_Member_Id(anyLong(), any(Pageable.class))).thenReturn(pagedProductCart);
+            when(converter.convertFromListedProductCartToPagedProductSimpleResponseForCart(any(Page.class)))
+                    .thenReturn(expectedResponse);
 
-            // when
-            Page<MyCartResponse> responses = cartService.findAllByMemberId(Pageable.unpaged());
+            Page<ProductSimpleResponseForCart> response = cartService.findAllByMemberId(pageable);
 
-            // then
-            assertThat(responses).isNotNull();
-            assertThat(responses.getContent()).hasSize(1);
-            assertThat(responses.getContent().get(0).getProducts()).isNotNull();
-            assertThat(responses.getContent().get(0).getProducts().get(0).getQuantity()).isEqualTo(2);
+            assertThat(response).isNotNull();
+            assertThat(response.getContent()).hasSize(1);
+            assertThat(response.getContent().get(0).getName()).isEqualTo("Test Product");
+        }
 
-            verify(cartRepository).findAllByMemberId(anyLong(), any(Pageable.class));
-        }*/
+        @Test
+        @DisplayName("장바구니 조회 실패 - 회원 없음")
+        void findAllByMemberIdFailMemberNotFound() {
+            when(memberService.findByEmail(anyString())).thenThrow(new IdNotFoundException("회원이 존재하지 않습니다."));
 
-        @Nested
-        @DisplayName("장바구니 삭제")
-        class DeleteCartTest {
-
-            @Test
-            @DisplayName("장바구니 삭제 성공")
-            void deleteCartSuccess() {
-                // given
-                when(productService.findById(anyLong())).thenReturn(testProduct);
-
-                // when
-                String response = cartService.deleteById(1L);
-
-                // then
-                assertThat(response).isEqualTo("Test Product");
-                verify(cartRepository).deleteById(anyLong());
-            }
+            assertThatThrownBy(() -> cartService.findAllByMemberId(Pageable.unpaged()))
+                    .isInstanceOf(IdNotFoundException.class)
+                    .hasMessage("회원이 존재하지 않습니다.");
         }
     }
+
+    @Nested
+    @DisplayName("장바구니에서 상품 삭제")
+    class DeleteByProductIdTest {
+
+        @Test
+        @DisplayName("장바구니에서 상품 삭제 성공")
+        void deleteByProductIdSuccess() {
+            when(memberService.findByEmail(anyString())).thenReturn(testMember);
+            when(productService.findById(anyLong())).thenReturn(testProduct);
+
+            String response = cartService.deleteByProductId(1L);
+
+            assertThat(response).isEqualTo("Test Product");
+            verify(productCartRepository).deleteByProductIdAndCart_MemberId(anyLong(), anyLong());
+        }
+
+        @Test
+        @DisplayName("장바구니에서 상품 삭제 실패 - 상품 없음")
+        void deleteByProductIdFailProductNotFound() {
+            when(memberService.findByEmail(anyString())).thenReturn(testMember);
+            when(productService.findById(anyLong())).thenThrow(new IdNotFoundException("상품이 존재하지 않습니다."));
+
+            assertThatThrownBy(() -> cartService.deleteByProductId(1L))
+                    .isInstanceOf(IdNotFoundException.class)
+                    .hasMessage("상품이 존재하지 않습니다.");
+
+            verify(productCartRepository, never()).deleteByProductIdAndCart_MemberId(anyLong(), anyLong());
+        }
+    }
+
+    @Nested
+    @DisplayName("장바구니 ID로 조회")
+    class FindByIdTest {
+
+        @Test
+        @DisplayName("장바구니 ID로 조회 성공")
+        void findByIdSuccess() {
+            when(cartRepository.findById(anyLong())).thenReturn(Optional.of(testCart));
+
+            Cart cart = cartService.findById(1L);
+
+            assertThat(cart).isNotNull();
+            assertThat(cart.getId()).isEqualTo(1L);
+            verify(cartRepository).findById(anyLong());
+        }
+
+        @Test
+        @DisplayName("장바구니 ID로 조회 실패 - ID 없음")
+        void findByIdFail() {
+            when(cartRepository.findById(anyLong())).thenReturn(Optional.empty());
+
+            assertThatThrownBy(() -> cartService.findById(1L))
+                    .isInstanceOf(IdNotFoundException.class)
+                    .hasMessageContaining("1(으)로 등록된 상품이 없습니다.");
+        }
+    }
+}
